syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "Tutorial.proto";

message GetTutorialScRsp {
	uint32 Retcode = 3;
	repeated Tutorial TutorialList = 9;
}